--- a/App.config
+++ b/App.config
@@ -1,9 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration>
+﻿<?xml version="1.0" encoding="utf-8"?><configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
-  <runtime>
+	<connectionStrings>
+		<add name="JavaConnection" connectionString="Server=localhost;Database=client_schedule;User ID=root;Password=invalid;" providerName="MySql.Data.MySqlClient" />
+	</connectionStrings>
+	<runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
