--- a/App.config
+++ b/App.config
@@ -3,7 +3,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<connectionStrings>
-		<add name="JavaConnection" connectionString="Server=localhost;Database=client_schedule;User ID=root;Password=invalid;" providerName="MySql.Data.MySqlClient" />
+		<add name="JavaConnection" connectionString="Server=localhost;Database=client_schedule;user=sqlUser;Password=Passw0rd!;port=3306" providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 	<runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
