--- a/Scheduling Desktop UI App.csproj
+++ b/Scheduling Desktop UI App.csproj
@@ -199,11 +199,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User Pages\UserListPage.cs">
+    <Compile Include="User Pages\UserNavigationPage.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="User Pages\UserListPage.Designer.cs">
-      <DependentUpon>UserListPage.cs</DependentUpon>
+    <Compile Include="User Pages\UserNavigationPage.Designer.cs">
+      <DependentUpon>UserNavigationPage.cs</DependentUpon>
     </Compile>
     <Compile Include="User Pages\UserListViewPage.cs">
       <SubType>Form</SubType>
@@ -267,8 +267,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="User Pages\UserListPage.resx">
-      <DependentUpon>UserListPage.cs</DependentUpon>
+    <EmbeddedResource Include="User Pages\UserNavigationPage.resx">
+      <DependentUpon>UserNavigationPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="User Pages\UserListViewPage.resx">
       <DependentUpon>UserListViewPage.cs</DependentUpon>
