--- a/packages.config
+++ b/packages.config
@@ -14,6 +14,7 @@
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="NUglify" version="1.21.10" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
+  <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
   <package id="System.IO.Pipelines" version="9.0.0" targetFramework="net48" />
